--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #000;
 }
+
+.App {
+  display: flex;
+  width: 75%;
+  min-height: 100vh;
+  align-items: center;
+  flex-direction: column;
+  margin-right: auto;
+  margin-left: auto;
+}
